# IntelligentBreezeSensor

./: CMakeLists.txt  README.md  prj.conf
akhil/akg_nrf52832/: Kconfig.akg_nrf52832  akg_nrf52832-pinctrl.dtsi  akg_nrf52832.dts  akg_nrf52832.yml  akg_nrf52832_defconfig  board.yml
boards/: nrf52dk_nrf52832.overlay
src/: TMP117.c  TMP117.h  main.c
